--- a/FriendsInTown/app/src/main/res/values/strings.xml
+++ b/FriendsInTown/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Friends In Town</string>
+    <string name="facebook_app_id">291979681134911</string>
 </resources>
